--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mecanica",
-  "version": "1.0.0",
+  "name": "siga",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "npx tailwindcss -i ../Frontend/css/tailwind.css -o ../Frontend/css/output.css --watch"
+    "build:css": "npx tailwindcss -i ../Frontend/css/tailwind.css -o ../Frontend/css/output.css --watch",
+    "build": "tsc",
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +21,15 @@
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.14"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
+    "@types/node": "^22.8.7",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
