--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "pg-promise": "^11.10.1",
     "postcss": "^8.4.47",
@@ -37,6 +38,7 @@
     "@types/express": "^5.0.0",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.7",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
